[package]
name = "stakemon"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled = "0.34.7"
serde = {version = "1", features = ["derive"]}
serenity = "0.11"
tokio = { version = "1", features = ["full"]}
reqwest = "0.11.10"
log = "0.4.17"
tracing-subscriber = "0.3.11"